[project]
name = "season-transfer"
version = "0.1.0"
description = ""
authors = [
    {name = "ryanvolpi",email = "ryanvolpi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2,<2.3)",
    "opencv-python (==4.12.0.88)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
black = "^25.1.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
mypy = "^1.17.1"
pre-commit = "^4.3.0"

[tool.poetry]
package-mode = false
